--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@hookform/resolvers": "^5.2.2",
     "framer-motion": "^12.33.0",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
@@ -17,7 +18,12 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "swiper": "^12.1.0"
+    "react-hook-form": "^7.71.1",
+    "resend": "^6.9.2",
+    "sonner": "^2.0.7",
+    "sweetalert2": "^11.26.18",
+    "swiper": "^12.1.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
